--- a/ht.html
+++ b/ht.html
@@ -9,7 +9,7 @@
   
   <form>
     <h1>JavaScript Login System</h1>
-    <label for="username">帳號(用戶名):</label>
+    <label for="username">帳號(用戶名字):</label>
     <input type="text" id="username" name="username">
     <br><br>
     <label for="password">密碼:</label>
