--- a/ht.html
+++ b/ht.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="c.css">
   
   <form>
-    <h1>JavaScript Login System</h1>
+    <h1>gu爸爸教學平台</h1>
     <label for="username">帳號(用戶名):</label>
     <input type="text" id="username" name="username">
     <br><br>
