--- a/英文.html
+++ b/英文.html
@@ -3,7 +3,6 @@
 <button class="pink-blue-button">回上頁</button>
 </a>
 <hr>
-
 <script>
 let select = document.querySelector("#mySelect");
 select.addEventListener("change", function() {
@@ -11,6 +10,7 @@ select.addEventListener("change", function() {
 });
 </script>
 <a href="英文影1.html">
-    <img src="下載.jfif" alt="Image description">
+    <img src="未命名@.png" alt="Image description" width="170">
   </a>
+</head>
    
