--- a/理化.html
+++ b/理化.html
@@ -10,6 +10,6 @@ select.addEventListener("change", function() {
 });
 </script>
 <a href="理化影1.html">
-    <img src="下載.jfif" alt="Image description">
+    <img src="未命名.png" alt="Image description" width="170">
   </a>
    
