--- a/數學.html
+++ b/數學.html
@@ -11,6 +11,6 @@ select.addEventListener("change", function() {
 });
 </script>
 <a href="數影1.html">
-    <img src="下載.jfif" alt="Image description">
+    <img src="未命名1.png" alt="Image description" width="170">
   </a>
    
