--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar練習</title>
+    <title>gu爸爸學習平台</title>
     <!-- css連結 -->
     <link rel="stylesheet" href="style.css">
 
