--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- List 列表 -->
                 <ul class="list-unstyled">
-                    <p> gu學習平台 </p>
+                    <p> gu學習平台1.0 </p>
 
 
                     <li>
@@ -71,6 +71,8 @@
         <!-- 右邊 -->
         <div class="container-right">
             <div class="container-fluid">
+               
+<marquee>gu學習平台1.0版本</marquee>
                 <h1>歡迎來到 gu學習平台</h1>
 
             </div>
@@ -90,20 +92,3 @@
 
 
 
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-</html>
