--- a/英文影1.html
+++ b/英文影1.html
@@ -89,6 +89,58 @@ button:hover {
 }
 
   </style>
+    <html>
+  <head>
+    <title>Chat Room</title>
+  </head>
+  <body>
+    <div id="chat-area">
+      <div id="chat-history">
+        <!-- messages will be displayed here -->
+      </div>
+      <div id="chat-input">
+        <input type="text" id="chat-message" placeholder="Type your message here">
+        <button id="chat-submit">Submit</button>
+        <button id="chat-clear">Clear Chat</button>
+        <input type="password" id="chat-password" placeholder="Password to clear chat">
+      </div>
+    </div>
+
+    <script>
+      const chatMessage = document.getElementById("chat-message");
+      const chatSubmit = document.getElementById("chat-submit");
+      const chatClear = document.getElementById("chat-clear");
+      const chatPassword = document.getElementById("chat-password");
+      const chatHistory = document.getElementById("chat-history");
+
+      // Load previous messages from local storage
+      chatHistory.innerHTML = localStorage.getItem("chatHistory") || "";
+
+      chatSubmit.addEventListener("click", function() {
+        const message = chatMessage.value;
+        chatHistory.innerHTML += `<p>You: ${message}</p>`;
+        chatMessage.value = "";
+
+        // Save chat history to local storage
+        localStorage.setItem("chatHistory", chatHistory.innerHTML);
+      });
+
+      chatClear.addEventListener("click", function() {
+        const password = chatPassword.value;
+
+        // Check if password is correct
+        if (password === "secret") {
+          chatHistory.innerHTML = "";
+
+          // Save empty chat history to local storage
+          localStorage.setItem("chatHistory", "");
+        } else {
+          alert("Incorrect password!");
+        }
+      });
+    </script>
+  </body>
+</html>
 </body>
 </html>
 
