--- a/英文影1.html
+++ b/英文影1.html
@@ -168,7 +168,7 @@ button:hover {
   chatClear.addEventListener("click", function() {
     // Check if password is correct
     const password = chatPassword.value;
-    if (password === "secret") {
+    if (password === "password") {
       chatHistory.innerHTML = "";
 
       // Save empty chat history to local storage
